--- a/Lista de Exercicios 3 - Programando em C/Exercicios/Exercicio3/Exercicio3.cbp
+++ b/Lista de Exercicios 3 - Programando em C/Exercicios/Exercicio3/Exercicio3.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="calculo.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="calculo.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
