--- a/Lista de Exercicios 3 - Programando em C/Exercicios/Exercicio4/Exercicio4.cbp
+++ b/Lista de Exercicios 3 - Programando em C/Exercicios/Exercicio4/Exercicio4.cbp
@@ -34,6 +34,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="matriz.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="matriz.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
